--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ transition: background-color 0.3s;
   gap: 20px;
   justify-content: center;
   padding: 2rem;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
 }
 
@@ -199,6 +199,8 @@ background-color: #357abd;
   width: 100%;
   max-width: 400px;
   text-align: center;
+  justify-self: center;
+  margin: 1rem;
 }
 
 .auth-container h2 {
